checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000192955.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#45: 
> kernel/time/clocksource.c:108: error: too few arguments to function 'watchdog->read'

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#59: 
kernel/time/clocksource.c: In function ‘clocksource_watchdog’:kernel/time/clocksource.c:108: error: too few arguments to function ‘watchdog->read’
                                       ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#60: 
kernel/time/clocksource.c:113: error: too few arguments to function ‘cs->read’
                                                                    ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#61: 
kernel/time/clocksource.c: In function ‘clocksource_check_watchdog’:
                                       ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#62: 
kernel/time/clocksource.c:173: error: too few arguments to function ‘watchdog->read’
                                                                    ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#63: 
kernel/time/clocksource.c:194: error: too few arguments to function ‘watchdog->read’
                                                                    ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000192955.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 1 warnings, 5 checks, 30 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000192955.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
